Fixed header text for each section on mobile view.

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -143,5 +143,6 @@ dfn {
 @media only screen and (max-width: 650px) {
     .AboutHeaders {
         left: 60%;
+        font-size: 2.5rem;
     }
 }
