--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -112,6 +112,7 @@
 .ContactSubmit {
     font-size: 2rem;
     padding: 5px 10px;
+    margin-bottom: 10px;
     border-radius: 10px;
     background-color: #E76768;
     color: #FAFBD2;
@@ -177,6 +178,7 @@
 @media only screen and (max-width: 650px) {
     .ContactHeaders {
         left: 55%;
+        font-size: 2.5rem;
     }
 }
 @media only screen and (max-width:500px) {
